# Ray-it

./: .gitignore  CMakeLists.txt  README.md  Ray-it_Debug  compile_debug.bat  compile_debug_float.bat  compile_rel_with_deb_info.bat  compile_release.bat  compile_release_float.bat  dockerfile  linux_compile_debug.sh  linux_compile_debug_float.sh  linux_compile_release.sh  linux_compile_release_float.sh  matlab_results_plotter.m
.github/: FUNDING.yml
cases/: 1km_square_20m.stl  3faces.json  3faces.stl  Dipole1.out  SWISSBUILDINGS3D_2_0_CHLV95LN02_1373-43.dxf  V.mat  X.mat  Y.mat  Z.mat  bullington.json  bullington_and_reflexion.json  double_antenna.json  dxf_buildings.json  dxf_buildings_no_terrain.json  heterogeneous_mesh.stl  heterogeneous_mesh2.stl  problematic_cone.stl  reference14_double.post.res  reference14_float.post.res  reference2.post.msh  reference3.post.res  reference3_double.post.res  reference4.post.res  reference4_double.post.res  reference5.post.res  reference5_double.post.res  reference7.post.msh  reference7_double.post.msh  reference7_float.post.msh  simple_run.json  simple_run.post.msh  simple_run.post.res  simple_run_matlab_output.json  simple_run_with_bullington.json  sphere.stl  square_test.stl  square_with_smaller_square_after_test.stl  square_with_smaller_square_before_test.stl
external_libraries/: MeshPlaneIntersect.hpp  progressbar.hpp
src/: antenna.cpp  antenna.h  box.cpp  box.h  bullington.h  computation.cpp  computation.h  constants.cpp  constants.h  dxf_parser.h  geometric_operations.h  gid_output.h  inputs_reader.h  jones.cpp  jones.h  (+25 more)
(+24 files in other folders)
